--- a/.github/workflows/calendar_script.yml
+++ b/.github/workflows/calendar_script.yml
@@ -1,13 +1,13 @@
-name: Run Python Script
+name: Run web.py script
 
 on:
   schedule:
-    - cron: "0 0 * * *" # tous les jours à minuit
-  workflow_dispatch: # lancer manuellement l'action
+    - cron: "0 0 * * *" # Exécuter tous les jours à minuit
+  workflow_dispatch:
 
 jobs:
   run-script:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # Spécifie une version stable d'Ubuntu
 
     steps:
       - name: Checkout repository
@@ -16,9 +16,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10" # py version
+          python-version: "3.10"
 
-      # dépendances
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -30,22 +29,15 @@ jobs:
           unzip chromedriver_linux64.zip -d /usr/local/bin/
           rm chromedriver_linux64.zip
 
+      - name: Check Chrome and ChromeDriver versions
+        run: |
+          google-chrome --version
+          chromedriver --version
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run script
       - name: Run Python script
-        run: python web.py
-
-      # Save data
-      - name: Commit and push updated JSON
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/donnees_matchs.json
-          git commit -m "Mise à jour automatique des données JSON"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python web.py || exit 1
